deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: noviblog
  name: noviblog
spec:
  template:
    metadata:
      labels:
        app: noviblog
    spec:
      containers:
        - name: noviblog
          image: ghcr.io/jvorhauer/noviblog:latest
          resources:
            limits:
              cpu: "1"
              memory: "1024Mi"
            requests:
              cpu: 500m
              memory: "512Mi"
          livenessProbe:
            failureThreshold: 5
            httpGet:
              port: 8080
              path: /actuator/health/liveness
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 5
            httpGet:
              port: 8080
              path: /actuator/health/readiness
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
          imagePullPolicy: Always
          ports:
            - name: noviblog
              containerPort: 8080
              protocol: TCP
      imagePullSecrets:
        - name: dockerregistry
  selector:
    matchLabels:
      app: noviblog
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
