deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noviblog
  labels:
    app: noviblog
spec:
  ports:
    - port: 8080
  type: ClusterIP
  selector:
    app: noviblog
