deploy/ingress-konomas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-konomas
spec:
  rules:
    - host: enna.miruvor.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: konomas
                port:
                  name: http
  tls:
    - hosts:
        - enna.miruvor.nl
      secretName: microbot-ingress-tls
