deploy/ingress-microbot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microbot
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - enna.miruvor.nl
      secretName: microbot-ingress-tls
  rules:
    - host: enna.miruvor.nl
      http:
        paths:
          - backend:
              service:
                name: microbot
                port:
                  number: 80
            path: /
            pathType: Exact
